<resources>
    <string name="app_name">QuizzAppFinal</string>
    <string name="next_button">Siguiente</string>
    <string name="correct_text">Correcto</string>
    <string name="incorrect_text">Incorrecto</string>
    <string name="prev_button">Anterior</string>
    <string name="hint_button">Use Hint</string>
    <string name="score_img">ImagendelScore</string>
    <string name="really_bad_score_text">Te fue muy mal wey</string>
    <string name="bad_score_text">Puedes Mejorar</string>
    <string name="good_score_string">Muy Bien!</string>
    <string name="great_score_string">Excelente!</string>
    <string name="result_text">Resultado final:</string>
    <string name="again_button">Jugar de nuevo?</string>
    <string name="jugar">Jugar</string>
    <string name="opciones">Opciones</string>
    <string name="trabajo_en_proceso">Trabajo en proceso</string>
    <string name="hints_text">Pistas restantes: 5</string>
    <string name="streak">Racha: 0</string>
    <string name="score">Total Score: 0</string>
    <string name="puntuacion_btn_text">Puntuaciones</string>
    <string name="options_title_text">Opciones de Juego</string>
    <string name="Checkbox_theme_text">Deportes</string>
    <string name="Checkbox_music_text">Musica</string>
    <string name="Checkbox_science_text">Ciencias</string>
    <string name="Checkbox_videogames_text">Videojuegos</string>
    <string name="Checkbox_Historia_Text">Historia</string>
    <string name="Checkbox_literature_text">Literatura</string>
    <string name="Puntuaciones_text">Puntuaciones</string>
    <string name="TOP_results_text_top5">Top resultados</string>
    <string name="back_to_title_button_text">Regresar</string>
    <string name="Clue_switch_text">PISTAS</string>
    <string name="themes_text">TEMAS</string>
    <string name="save_options_button_text">GUARDAR</string>
    <string name="slider_text_title">Numero de preguntas</string>
    <string name="Dificulty_spinner_text">Dificultad</string>


</resources>