<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_title_text"
            android:textSize="30sp"/>

        <CheckBox
            android:id="@+id/Deportes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_theme_text"/>
        <CheckBox
            android:id="@+id/Musica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_music_text"/>
        <CheckBox
            android:id="@+id/Ciencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_science_text"/>
        <CheckBox
            android:id="@+id/Videojuegos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_videogames_text"/>
        <CheckBox
            android:id="@+id/Historia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_Historia_Text"/>
        <CheckBox
            android:id="@+id/Peliculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_Movies_text"/>

        <Spinner
            android:layout_marginTop="20dp"
            android:id="@+id/spinner_dificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>