<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_margin="20dp"
        android:text="@string/result_text"
        tools:text="Resultado final:" />

    <TextView
        android:id="@+id/score_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        tools:text="0"/>


    <ImageView
        android:id="@+id/img_score"
        android:layout_width="300sp"
        android:layout_height="200sp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:layout_margin="20dp"
        android:contentDescription="@string/score_img"
        />

    <TextView
        android:id="@+id/score_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_margin="20dp"
        tools:text="you did bad"
        />



    <Button
        android:id="@+id/start_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:text="@string/again_button"
        />

</LinearLayout>

