<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:contex=".MainActivity">

        <TextView
            android:id="@+id/puntaje_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/score"
            />

        <TextView
            android:id="@+id/hints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/hints_text"
            />

        <TextView
            android:id="@+id/streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/streak"
            />

        <ImageView
            android:id="@+id/imageCategoria"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:maxHeight="120dp"
            android:maxWidth="120dp"/>

        <TextView
            android:id="@+id/pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="30dp"
            android:layout_marginBottom="50dp"
            tools:text="una pregunta bien sabrosa aaaaaa"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/boton_1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="1"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/boton_2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="2"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/boton_3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="3"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/boton_4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="4"
                android:textColor="@color/white"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_anterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/prev_button"
                android:textColor="@color/black"
                android:visibility="invisible" />

            <Button
                android:id="@+id/boton_siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/next_button"
                android:textColor="@color/black"
                android:visibility="invisible"/>
        </LinearLayout>

        <Button
            android:id="@+id/test_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_button"
            android:layout_marginBottom="50dp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
