<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Activity1"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="-72dp">

        <Button
            android:id="@+id/Opciones"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:text="@string/opciones" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="200sp"
                android:layout_height="135dp"
                android:layout_margin="20dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <Button
                android:id="@+id/jugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jugar" />

            <Button
                android:id="@+id/puntuaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntuacion_btn_text"/>

<!--            <Spinner-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:id="@+id/spinner_dificultad"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>